--- a/css/reset.css
+++ b/css/reset.css
@@ -26,49 +26,4 @@ body{
 
 /* font */
 
-@font-face {
-  font-family: 'Roboto';
-  font-style: none;
-  font-weight: 400;
-  src: url(../font/Roboto/Roboto-Regular.ttf);
-}
-
-@font-face {
-  font-family: 'Roboto';
-  font-style: none;
-  font-weight: 500;
-  src: url(../font/Roboto/Roboto-Light.ttf);
-}
-
-
-@font-face {
-  font-family: 'Roboto';
-  font-style: none;
-  font-weight: 600;
-  src: url(../font/Roboto/Roboto-Medium.ttf);
-}
-
-
-
-
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: none;
-  font-weight: 300;
-  src: url(../font/NotoSans_KR/NotoSansKR-Light.otf);
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: none;
-  font-weight: 600;
-  src: url(../font/NotoSans_KR/NotoSansKR-Medium.otf);
-}
-
-@font-face {
-  font-family: 'Noto Sans KR';
-  font-style: none;
-  font-weight: 700;
-  src: url(../font/NotoSans_KR/NotoSansKR-Bold.otf);
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Roboto:wght@700;900&display=swap');
