--- a/scss/index.scss
+++ b/scss/index.scss
@@ -250,18 +250,16 @@ html, body{
     }
     .img-erea{
       position: relative;
-      &::after{
-        content: "";
-        @include linear-gradient;
-        height: 50%;
-        z-index: 0;
-      } 
+      overflow: hidden;
+      &:hover{
+        img{
+          transition: all 0.6s ease;
+          transform: scale(1.1);
+        }
+      }
       img{
       width: 100%;
       z-index: -1;
-      }
-      &:hover::after{
-        height: 100%;
       }
     }
     .txt-erea{
@@ -471,8 +469,10 @@ html, body{
       font-weight: 500;
       h2{
         margin-right: 15px;
-        font-size: 26px;
+      }
+      p{
         font-weight: 600;
+        font-size: 26px;
       }
     }
     .sub-txt{
@@ -648,7 +648,6 @@ html, body{
   .swiper-slide {
     text-align: center;
     display: flex;
-    // justify-content: center;
     align-items: center;
   }
   .swiper-pagination {
@@ -669,7 +668,11 @@ html, body{
 
 
 // popup
-.popup-1{
+.popup {
+  visibility: hidden;
+  .close_pop {
+    color:rgb(235, 235, 233);
+  }
   &::before {
     content:""; 
     display:block; 
@@ -681,7 +684,20 @@ html, body{
     background:rgba(0,0,0,.5);
     z-index:9000
   }
-  // div{display : inline;}
+
+  &.active {
+    visibility: visible;
+  }
+  &.popup-1 {
+    .popup-box {
+      left: 150px;
+    }
+  }
+  &.popup-2 {
+    .popup-box {
+      left:530px; 
+    }
+  }
   img{width: 350px;}
   a{
     text-decoration : none;
@@ -691,8 +707,7 @@ html, body{
   .popup-box{
     z-index:10000;   
     position:fixed; 
-    left:5%; 
-    top:20%; 
+    top: 200px;
     background:#000; 
   }
   .title {
@@ -700,9 +715,10 @@ html, body{
     padding-bottom:10px; 
     border-bottom:1px solid #d9d9d9;
   }
+
   form{
     font-size:16px; 
-    weight: 100%;
+    width: 100%;
     height : 30px;
     line-height:30px;
     color: $color-white;
@@ -711,49 +727,7 @@ html, body{
     padding: 0 10px;
   }
 }
-// popup
-.popup-2{
-  &::before {
-    content:""; 
-    display:block; 
-    position:fixed; 
-    left:0; 
-    top:0; 
-    width:100%; 
-    height:100%;
-    background:rgba(0,0,0,.5);
-    z-index:9000
-  }
-  // div{display : inline;}
-  img{width: 350px;}
-  a{
-    text-decoration : none;
-    width: 50px;
-    height : 40px;
-  }
-  .popup-box{
-    z-index:10000;   
-    position:fixed; 
-    left:30%; 
-    top:20%; 
-    background:#000; 
-  }
-  .title {
-    margin-bottom:10px; 
-    padding-bottom:10px; 
-    border-bottom:1px solid #d9d9d9;
-  }
-  form{
-    font-size:16px; 
-    weight: 100%;
-    height : 30px;
-    line-height:30px;
-    color: $color-white;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 10px;
-  }
-}
+
 
 
 
