--- a/scss/index.scss
+++ b/scss/index.scss
@@ -49,7 +49,7 @@ html, body{
   &:hover::before{width: 100%;}
 }
 
-// header
+// hd
 .hd{
   position: absolute;
   top: 0;
@@ -74,7 +74,7 @@ html, body{
         color: $color-white;
         position: relative;
         &+li::after{
-          content: "/";
+          content: "";
           position: absolute;
           left: -5px;
           color: $color-white;
@@ -425,6 +425,7 @@ html, body{
     @include pos-center;
     position: absolute;
     text-align: center;
+    // width: 100%;
     width: calc(100% - 40px);
     z-index: 1;
     
@@ -630,6 +631,7 @@ html, body{
     }
   }
   .copyright{
+    // margin-top: 20px;
     font-weight: 300;
     p:nth-child(1){font-weight: 500;}
     p:nth-child(2){padding-top: 5px;}
@@ -796,6 +798,21 @@ html, body{
 }
 
 @media screen and (max-width:980px){
+  .popup{
+    &.popup-1 {
+      .popup-box {
+        top: 150px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+    form{
+      font-size: 14px;
+    }
+  }
+
+
+
   .tit{
     font-size: 90px;
   }
@@ -858,6 +875,10 @@ html, body{
           font-size: 21px;
           font-weight: 600;
           padding: 0 20px;
+          // &.active{
+          //   color: $color-green2;
+          //   box-shadow: 0 5px 5px rgba(0,0,0,0.05), 0 1px 1px rgba(0,0,0,0.05);
+          // }
         }
         &.active {
           .tit {
@@ -917,6 +938,9 @@ html, body{
         padding: 0;
       }
       .bar{
+        // height: 2px; 
+        // background-color: #fff;
+        // width: 30px;
         margin: 2px 0; 
         width: 5px;
         height: 5px; 
@@ -1012,6 +1036,7 @@ html, body{
       .reveal{
         position: absolute;
         bottom: 100%;
+        // left: 80%;
         left: auto;
         right: 0;
       .more{
